<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E|Home App</string>
    <string name="action_settings">Settings</string>
    <string name="ON">An</string>
    <string name="OFF">Aus</string>
    <string name="tv_main_title_text">Lampenzustand:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Willkommen!</string>
    <string name="tv_login_command">Bitte geben Sie Ihre Zugangsdaten ein.</string>
    <string name="email">Email</string>
    <string name="password">Passwort</string>
    <string name="login">Anmelden</string>
    <string name="login_remember">Anmeldedaten speichern</string>
    <string name="progress_dialog_title">Daten werden gesendet</string>
    <string name="progress_dialog_message">Bitte warten</string>
    <string name="incorrest_data_message">Inkorrekt. Bitte überprüfen Sie Ihre Eingaben</string>
    <string name="temperature">Temperatur:</string>
    <string name="humidity">Luftfeuchtigkeit:</string>
    <string name="lamp_behavior">Lampenverhalten</string>
    <string name="lamp_behavior_norm">An/Aus</string>
    <string name="lamp_behavior_move">An/Bewegungsgesteuert</string>
    <string name="control">Steuerung:</string>
    <string name="lampTime">Zeit, nach der die Lampe ausgeht:</string>
    <string name="saveValues">Übernehmen</string>
    <string name="ruleTitle">Einstellungen</string>
    <string name="no_alarm">Derzeit liegen keine Meldungen vor.</string>
    <string name="alarm">Es gibt folgende Meldungen:</string>
    <string name="back">Zurück</string>
    <string name="alaDia_Title">Meldungen</string>
    <string name="diaRule_lightTimeTitle">Bei Bewegung ist das Licht an für:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="no_value">--</string>
    <string name="seconds">Sekunden</string>
    <string name="days">Tage</string>
    <string name="flowerRule">Blumenkontrolle</string>
    <string name="flowerRuleText1">Benachrichtigung</string>
    <string name="flowerRuleText2">nach dem letzten Giessen</string>

    

</resources>