<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/e_home_logo"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="15dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="15dip"
        android:background="@color/black_50"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_login_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_login_loginCmd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:text="@string/tv_login_command"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_login_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dip"
            android:text="@string/email"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/et_login_email_enter"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_login_pw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            android:text="@string/password"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/et_login_pw_enter"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dip"
            android:layout_gravity="center_horizontal" >

            <CheckBox
                android:id="@+id/cb_login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/b_login_login"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>